Implemented a very basic login setup
