# routes/api/v1/auth.js
@@ -1,8 +1,10 @@
 const express = require('express');
 const router = express.Router();
 
-router.post('/register', (req, res, next) => {
-  res.status(201).json({...req.body,id:1});
-});
+const { authRegisterUser, authLogin } = require("../../../controllers/auth");
+
+router.post('/register', authRegisterUser);
+
+router.post('/login', authLogin);
 
 module.exports = router;
